welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:5: error: not found: value prendreBiscuit
    prendreBiscuit()
    ^