welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
  while(!estSurBiscuit){
    avance()
  if (estSurBiscuit){
    prendreBiscuit()
  }
  }
}

for (i <- 1 to 7) {
    goAndGet();   /** avance pour prendre le biscuit **/ 
    droite();
    avance();
    gauche();
}